# sistema-omr

./: .gitignore  Dockerfile  README.md  docker-compose.yml  folha_resposta.py  pyproject.toml
app/: database.py  main.py  models.py  schemas.py
app/api/endpoints/: provas.py
app/services/: image_processor.py  omr_generator.py
testes/: teste_01_criacao.py  teste_02_correcao.py
