[project]
name = "sistema-omr"
version = "0.1.0"
description = "Sistema para correção auomática de provas"
authors = [
    {name = "Abel Souza",email = "abel.fernando@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "reportlab (>=4.4.10,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
