[project]
name = "sistema-omr"
version = "0.1.0"
description = "Sistema para correção auomática de provas"
authors = [
    {name = "Abel Souza",email = "abel.fernando@yahoo.com.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "reportlab (>=4.4.10,<5.0.0)",
    "sqlalchemy (>=2.0.47,<3.0.0)",
    "fastapi (>=0.133.0,<0.134.0)",
    "uvicorn (>=0.41.0,<0.42.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
